[gd_scene load_steps=22 format=2]

[ext_resource path="res://Sprites/Player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PlayerWithGun.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Text/Pixel Text/Pixel Font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sounds/Coin_Pickup.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Small Jump.wav" type="AudioStream" id=5]
[ext_resource path="res://Sprites/Player_Hurt.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player_Dead.png" type="Texture" id=7]
[ext_resource path="res://Sounds/Hit.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/Shotgun_Sound_Effect.wav" type="AudioStream" id=9]
[ext_resource path="res://Sprites/Gun Animation/Bullet.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sprites/Gun Animation/Frames/frame_3_delay-0.08s.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Gun Animation/Frames/frame_4_delay-0.08s.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Gun Animation/Frames/frame_0_delay-0.08s.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Gun Animation/Frames/frame_1_delay-0.08s.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Gun Animation/Frames/frame_2_delay-0.08s.png" type="Texture" id=15]
[ext_resource path="res://Sounds/Shotgun_Reload.wav" type="AudioStream" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ) ],
"loop": false,
"name": "Damage",
"speed": 4.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), null, ExtResource( 1 ) ],
"loop": true,
"name": "Restore",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": false,
"name": "Shoot",
"speed": 12.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Normal",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( -0.393311, -0.139786 )
script = ExtResource( 2 )

[node name="Player" type="AnimatedSprite" parent="."]
position = Vector2( -31.5448, 136.527 )
frames = SubResource( 1 )
animation = "Idle"
offset = Vector2( 31.9985, -135.953 )
flip_h = true

[node name="Player Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.4552, 0.168709 )
shape = SubResource( 2 )

[node name="Jump_Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Score" type="RichTextLabel" parent="."]
margin_left = -2.16748
margin_top = -25.6615
margin_right = 21.8325
margin_bottom = -8.66153
custom_fonts/mono_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
text = "0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin_Collected" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0.836243, -0.418121 )
stream = ExtResource( 4 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Hit_Sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0.418121, -0.418129 )
stream = ExtResource( 8 )

[node name="RightPosition" type="Position2D" parent="."]
position = Vector2( 6.09108, -0.885678 )

[node name="LeftPosition" type="Position2D" parent="."]
position = Vector2( -11.872, -0.923881 )

[node name="Shotgun" type="AnimatedSprite" parent="."]
position = Vector2( -5.20456, -0.74142 )
scale = Vector2( 0.0526334, 0.062995 )
frames = SubResource( 5 )
animation = "Normal"
playing = true
offset = Vector2( 75, 50 )
flip_h = true

[node name="Bullet" parent="." instance=ExtResource( 10 )]
position = Vector2( 11.2982, 0.734523 )

[node name="Shotgun Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="Shotgun Reload" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )

[node name="Shotgun Left" type="Position2D" parent="."]
position = Vector2( -8.82897, -0.907006 )

[node name="Shotgun Right" type="Position2D" parent="."]
position = Vector2( 4.6019, -0.87314 )
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
